ändrade searchbar i mobilversion

--- a/final2.html
+++ b/final2.html
@@ -128,10 +128,9 @@
                 height: 40px;
             }
 
-            .searchbar:hover {
-                
-                transform: none;
-            }
+            .old-post-container:hover .searchbar {
+    width: 80%;  
+}
         }
     </style>
 
