lagt till guldring runt loggan

--- a/final2.html
+++ b/final2.html
@@ -151,7 +151,7 @@
 
     <header class="rubrik">
         <img class="logga" src="JR transp.png" alt="" width="180">
-
+        <img class="ring" src="ring trans.png" alt="" >
         <div class="Social">
             <a href="https://twitter.com/ulle7389" target="_blank">
                 <img class="twitter" src="twitter.png" alt="" width="35"></a>
