ny logga och justerat mobilversion

--- a/final2.html
+++ b/final2.html
@@ -11,7 +11,7 @@
 
     <style>
         /* RESPONSIVE DESIGN */
-        @media screen and (min-width: 400px) and (max-width:800px) {
+        @media screen and (min-width: 500px) and (max-width:800px) {
             .box-container {
                 flex-direction: column;
 
@@ -61,7 +61,7 @@
 
 
 
-        @media screen and (max-width: 400px) {
+        @media screen and (max-width: 500px) {
             .box-container {
                 flex-direction: column;
             }
@@ -101,12 +101,12 @@
             }
 
             .Social {
-                margin-top: 10px;
+                margin-top: 30px;
                 margin-right: auto;
             }
 
             .rubrik:after {
-                height: 122px;
+                height: 80px;
             }
 
             .old-post-container {
@@ -131,7 +131,10 @@
             .old-post-container:hover .searchbar {
     width: 80%;  
 }
-        }
+
+
+
+       
     </style>
 
 
@@ -150,8 +153,8 @@
 
 
     <header class="rubrik">
-        <img class="logga" src="JR transp.png" alt="" width="180">
-        <img class="ring" src="ring trans.png" alt="" >
+        <img class="logga" src="JR transp3.png" alt="" width="180">
+        <!-- <img class="ring" src="ring trans.png" alt="" > -->
         <div class="Social">
             <a href="https://twitter.com/ulle7389" target="_blank">
                 <img class="twitter" src="twitter.png" alt="" width="35"></a>
