tog bort blå border på pic2

--- a/post1.html
+++ b/post1.html
@@ -185,7 +185,7 @@
                     provident quasi ea cumque, adipisci modi tenetur velit. Aliquid quibusdam laudantium iste fugit
                     animi harum saepe necessitatibus culpa dolores qui hic omnis eaque aspernatur distinctio, labore
                     commodi.</p>
-                <img style="border: 1px solid rgb(0, 64, 255);" class="bottom-pic"" src=" spotgamma.png" alt="">
+                <img " class="bottom-pic"" src=" spotgamma.png" alt="">
             </div>
         </div>
 
