ädrat så inlägg1 länkar till github och inte lokalt

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="box-container">
         <div  class="posts">
-           <a href="http://127.0.0.1:3000/INLÄMNINGSUPPGIFT/post1.html" target="_blank" > <div  class="post post-border">
+           <a href="http://ulle73.github.io/post1.html" target="_blank" > <div  class="post post-border">
                 <h3>RUBRIK 1</h3>
                 <img class="image-post" src="spotgamma.png" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At reiciendis ipsam aperiam. Quidem porro
@@ -171,7 +171,10 @@
 
 
 
-    <div class="footer"></div>
+    <div class="footer">
+        <h3>Contact:</h3>
+      <a href="#">rydqvist89@hotmail.com</a>
+    </div>
 
 
 
