--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <link rel="stylesheet" href="final2.css">
     <link rel="icon" href="mini.png">
-
+   
+    <script src="https://kit.fontawesome.com/b6f70e910f.js" crossorigin="anonymous"></script>
  
 </head>
 
@@ -172,7 +173,8 @@
 
 
     <div class="footer">
-        <h3>Contact:</h3>
+       
+        <i class="fa-solid fa-envelope"></i>
       <a href="#">rydqvist89@hotmail.com</a>
     </div>
 
