lagt över responsive design för inlägg1 i css

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 
     <link rel="stylesheet" href="final2.css">
     <link rel="icon" href="mini.png">
-   
     <script src="https://kit.fontawesome.com/b6f70e910f.js" crossorigin="anonymous"></script>
- 
+
 </head>
 
 
@@ -34,34 +33,50 @@
 
 
     <div class="box-container">
-        <div  class="posts">
-           <a href="http://ulle73.github.io/post1.html" target="_blank" > <div  class="post post-border">
-                <h3>RUBRIK 1</h3>
-                <img class="image-post" src="spotgamma.png" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At reiciendis ipsam aperiam. Quidem porro
-                    incidunt, cum dolorem eligendi culpa vitae fugiat ullam accusamus possimus tenetur nostrum fuga
-                    delectus voluptatum velit assumenda illum debitis minus earum. Nisi laborum fuga laboriosam iste?
-                    Sapiente iure, ipsum aliquid consequatur possimus explicabo quo consequuntur placeat voluptatibus
-                    pariatur eaque reprehenderit non. Itaque, reiciendis distinctio? Eaque debitis ipsam quia hic quod,
-                    earum laborum similique recusandae nulla et, nobis ipsum totam id exercitationem, quae accusamus
-                    provident corporis! Quas illum voluptatibus nihil similique libero ullam excepturi nulla quia,
-                    tempore minus magnam quidem incidunt beatae ipsa nisi repellat repudiandae earum delectus corrupti.
-                    Saepe iusto, sequi tenetur doloremque rerum, maxime, ea accusamus aperiam dolores asperiores
-                    corporis quasi tempora ipsa dolor quae excepturi eaque! Cum cumque obcaecati assumenda corporis quod
-                    commodi atque nam! Minus dicta, vitae, in doloremque illo necessitatibus sed quo non cum magnam
-                    earum facilis enim nobis fuga quos animi dolorum corrupti tenetur id at iure unde tempore ipsa iste?
-                    Possimus, similique corporis. Quas iusto laudantium nisi ea mollitia consectetur voluptates voluptas
-                    eligendi accusamus officia in consequatur velit repellat veniam dicta nihil sapiente sit earum,
-                    quam, perspiciatis modi. Quas, recusandae ipsam? Alias molestiae eius fuga quibusdam sapiente hic
-                    velit, dicta, repellendus non quia nam earum atque voluptates perferendis adipisci facilis, numquam
-                    neque. Voluptas tenetur eaque sed officia architecto, reiciendis debitis quia fuga facilis atque in
-                    voluptatibus, ducimus ratione dolorum cumque, magni maxime! Ipsam recusandae pariatur, sed aperiam
-                    sunt ea rem earum dolore error ipsum labore, molestias ad. Iure, maxime tempore pariatur, animi
-                    doloribus odit ipsam cumque amet dignissimos numquam autem, quae aliquid fuga hic asperiores
-                    impedit. Doloribus, nisi facilis. Doloremque beatae maiores corporis quos sed laudantium similique
-                    delectus quod facilis, sit libero quidem voluptatibus eaque vero? Itaque modi ducimus voluptatibus
-                    culpa tempora et, rem inventore aut! Tempore quae blanditiis natus.</p>
-            </div></a>
+        <div class="posts">
+            <a href="http://ulle73.github.io/post1.html" target="_blank">
+                <div class="post post-border">
+                    <h3>RUBRIK 1</h3>
+                    <img class="image-post" src="spotgamma.png" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At reiciendis ipsam aperiam. Quidem
+                        porro
+                        incidunt, cum dolorem eligendi culpa vitae fugiat ullam accusamus possimus tenetur nostrum fuga
+                        delectus voluptatum velit assumenda illum debitis minus earum. Nisi laborum fuga laboriosam
+                        iste?
+                        Sapiente iure, ipsum aliquid consequatur possimus explicabo quo consequuntur placeat
+                        voluptatibus
+                        pariatur eaque reprehenderit non. Itaque, reiciendis distinctio? Eaque debitis ipsam quia hic
+                        quod,
+                        earum laborum similique recusandae nulla et, nobis ipsum totam id exercitationem, quae accusamus
+                        provident corporis! Quas illum voluptatibus nihil similique libero ullam excepturi nulla quia,
+                        tempore minus magnam quidem incidunt beatae ipsa nisi repellat repudiandae earum delectus
+                        corrupti.
+                        Saepe iusto, sequi tenetur doloremque rerum, maxime, ea accusamus aperiam dolores asperiores
+                        corporis quasi tempora ipsa dolor quae excepturi eaque! Cum cumque obcaecati assumenda corporis
+                        quod
+                        commodi atque nam! Minus dicta, vitae, in doloremque illo necessitatibus sed quo non cum magnam
+                        earum facilis enim nobis fuga quos animi dolorum corrupti tenetur id at iure unde tempore ipsa
+                        iste?
+                        Possimus, similique corporis. Quas iusto laudantium nisi ea mollitia consectetur voluptates
+                        voluptas
+                        eligendi accusamus officia in consequatur velit repellat veniam dicta nihil sapiente sit earum,
+                        quam, perspiciatis modi. Quas, recusandae ipsam? Alias molestiae eius fuga quibusdam sapiente
+                        hic
+                        velit, dicta, repellendus non quia nam earum atque voluptates perferendis adipisci facilis,
+                        numquam
+                        neque. Voluptas tenetur eaque sed officia architecto, reiciendis debitis quia fuga facilis atque
+                        in
+                        voluptatibus, ducimus ratione dolorum cumque, magni maxime! Ipsam recusandae pariatur, sed
+                        aperiam
+                        sunt ea rem earum dolore error ipsum labore, molestias ad. Iure, maxime tempore pariatur, animi
+                        doloribus odit ipsam cumque amet dignissimos numquam autem, quae aliquid fuga hic asperiores
+                        impedit. Doloribus, nisi facilis. Doloremque beatae maiores corporis quos sed laudantium
+                        similique
+                        delectus quod facilis, sit libero quidem voluptatibus eaque vero? Itaque modi ducimus
+                        voluptatibus
+                        culpa tempora et, rem inventore aut! Tempore quae blanditiis natus.</p>
+                </div>
+            </a>
             <div class="post post-border">
                 <h3>RUBRIK 2</h3>
                 <img class="image-post" src="spotgamma.png" alt="">
@@ -173,9 +188,9 @@
 
 
     <div class="footer">
-       
+
         <i class="fa-solid fa-envelope"></i>
-      <a href="#">rydqvist89@hotmail.com</a>
+        <a href="#">rydqvist89@hotmail.com</a>
     </div>
 
 
