--- a/post1.html
+++ b/post1.html
@@ -7,6 +7,7 @@
     <title>Min Blogg</title>
 
     <link rel="stylesheet" href="final2.css">
+    <link rel="stylesheet" href="post.css">
     <link rel="icon" href="mini.png">
 
     
